add encrypt route
